Fixed blog list spacing

--- a/jamie.css
+++ b/jamie.css
@@ -231,7 +231,7 @@ div.blog-list {
 }
 
 div.blog-list h3 {
-    margin-top: 23px;
+    margin-top: 19.5px;
     margin-bottom: 0px;
 }
 
